@startuml
!include style.puml
show members
hide empty members
skinparam classAttributeFontColor #FFFFFF
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

Package Enrolment as EnrolmentPackage <<Rectangle>>{

Class UniqueEnrolmentList
Class Enrolment
    class Hours

    class Remark
}

Package Shared {
    class Name
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> UniqueEnrolmentList

UniqueEnrolmentList .down.> "*" Enrolment
Enrolment *-right--> "Member 1" Name
Enrolment *-right--> "Event 1" Name
Enrolment *--> "1" Hours
Enrolment *--> "1" Remark

@enduml
